--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 blinker==1.9.0
+chardet==5.2.0
 click==8.1.7
 colorama==0.4.6
 Flask==3.1.0
@@ -6,7 +7,10 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 lxml==5.3.0
 MarkupSafe==3.0.2
+pillow==11.0.0
+pypandoc==1.14
 PyPDF2==3.0.1
 python-docx==1.1.2
+reportlab==4.2.5
 typing_extensions==4.12.2
 Werkzeug==3.1.3
